[package]
name = "scram-rs"
version = "0.10.1"
authors = ["Aleksandr Morozov <alex@nixd.org>"]
edition = "2021"
description="Salted Challenge Response Authentication Mechanism (SCRAM) SASL mechanism, a library which implements SCRAM logic"
repository = "https://repo.4neko.org/4NEKO/scram-rs"
keywords = ["SCRAM", "SASL"]
categories = ["authentication", "network-programming"]
documentation = "https://docs.rs/scram-rs/latest/scram_rs/"
license="MPL-2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = true
lto = true

[features]
default = []
use_ring = []

[dependencies]

#non GPL
getrandom="0.2"
base64 = "0.21"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

ring = "0.17"

async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["full"] } 

[[example]]
name = "scram_cs"

[[example]]
name = "scram_cs_key"

[[example]]
name = "scram_cs_err"

[[example]]
name = "scram_cs_async_err"
