[package]
name = "scram-rs"
version = "0.12.0"
authors = ["Aleksandr Morozov <alex@nixd.org>"]
edition = "2021"
description="Salted Challenge Response Authentication Mechanism (SCRAM) SASL mechanism, a library which implements SCRAM logic"
repository = "https://repo.4neko.org/4NEKO/scram-rs"
keywords = ["SCRAM", "SASL"]
categories = ["authentication", "network-programming"]
documentation = "https://docs.rs/scram-rs/latest/scram_rs/"
license="MPL-2.0"

[features]
default = []

# Adds a crate ring which implements pbkdf2, hmac and which is faster but less safe.
use_ring = []

# When added, removes SHA-1 from implementation. SHA-1 is unsafe and for this reason a +
# is not supported to encourage developers not to use it.
exclude_sha1 = []

[dependencies]

#non GPL
getrandom="0.2"
base64 = "0.22"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

ring = "0.17"

async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["full"] } 

[[example]]
name = "scram_cs"

[[example]]
name = "scram_cs_dyn"

[[example]]
name = "scram_cs_key"

[[example]]
name = "scram_cs_err"

[[example]]
name = "scram_cs_async_err"

[[example]]
name = "scram_cs_async_dyn"

[[example]]
name = "scram_cs_variable"

[[example]]
name = "scram_types_override"
